# soyal_client

./: Cargo.toml  LICENSE  README.md
src/: api_types.rs  common.rs  enums.rs  lib.rs  request.rs  response.rs  structs.rs
tests/: integration_test.rs
