[package]
name = "soyal_client"
version = "0.1.0"
edition = "2018"
license = "MIT"
authors = ["Juhasz Sandor <blackghost1987@gmail.com>"]
description = "Soyal Card reader protocol implementation"
repository = "https://github.com/blackghost1987/soyal_client/"

[dependencies]
chrono = { version =  "0.4", features = ["serde"] }
either = { version = "1.6", features = ["serde"] }
enum_primitive = "0.1"
macaddr = { version = "1.0", features = ["serde_std"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
